--- a/index.html
+++ b/index.html
@@ -1,16 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Based on https://github.com/fajarnurwahid/responsive-login-register-form -->
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/default-style.css">
     <link rel="stylesheet" href="./css/style.css">
-    <!-- JavaScript -->
-    <script src="./js/script.js" defer></script>
-    <title>Title</title>
+    <title>Cat</title>
 </head>
 <body>
     <header>
@@ -31,7 +28,7 @@
                 <a href="#" class="btn header-btn">Sign up</a>
             </div>
             <div class="header-image-container">
-                <img src="images/imgheader.jpeg" alt="header image" >
+                <img src="images/imgheader.jpeg" alt="header image" id="img-header">
             </div>
         </div>
     </header>
